Super secret bonus treat

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=9t57C7NcjWo&autoplay=1">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1> Cant you see imma worning sign</h1>
-
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ullam error obcaecati explicabo, culpa dolor maxime harum quisquam fugit, nostrum dolores voluptas omnis repellat accusamus ea voluptatum magnam aut soluta.</p>
-</body>
-</html>
+    <p>If you are not redirected automatically, click <a href="https://www.youtube.com/watch?v=9t57C7NcjWo&autoplay=1">here</
